# MPI-MSFEC

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists_LIB.txt  README.md  annotated.html  approximate__inverse_8h.html  approximate__inverse_8h__dep__incl.map  approximate__inverse_8h__dep__incl.md5  approximate__inverse_8h__incl.map  approximate__inverse_8h__incl.md5  approximate__inverse_8h_source.html  approximate__inverse_8tpp.html  approximate__inverse_8tpp__dep__incl.map  approximate__inverse_8tpp__dep__incl.md5  approximate__inverse_8tpp_source.html  approximate__schur__complement_8h.html  approximate__schur__complement_8h__dep__incl.map  approximate__schur__complement_8h__dep__incl.md5  approximate__schur__complement_8h__incl.map  approximate__schur__complement_8h__incl.md5  approximate__schur__complement_8h_source.html  approximate__schur__complement_8tpp.html  approximate__schur__complement_8tpp__dep__incl.map  approximate__schur__complement_8tpp__dep__incl.md5  approximate__schur__complement_8tpp_source.html  basis__nedelec_8h.html  basis__nedelec_8h__dep__incl.map  basis__nedelec_8h__dep__incl.md5  basis__nedelec_8h__incl.map  basis__nedelec_8h__incl.md5  basis__nedelec_8h_source.html  basis__nedelec_8inst_8cc.html  basis__nedelec_8inst_8cc__incl.map  basis__nedelec_8inst_8cc__incl.md5  basis__nedelec_8inst_8cc_source.html  basis__nedelec_8tpp.html  basis__nedelec_8tpp__dep__incl.map  basis__nedelec_8tpp__dep__incl.md5  (+1004 more)
doc/: Doxyfile
doc/pages/: mainpage.dox
example_parameters/: parameter_rt_dq.in  prm_ned_rt_test-01.in  prm_ned_rt_test-02.in  prm_ned_rt_test-03.in  prm_ned_rt_test-04.in  prm_q_ned_test-01.in  prm_q_ned_test-02.in  prm_q_ned_test-03.in  prm_q_ned_test-04.in  prm_q_test-01.in  prm_rt_dq_test-01.in
include/: approximate_inverse.tpp  approximate_schur_complement.tpp  coeff_scalar.h  coefficients.h  config.h  eqn_boundary_vals.h  eqn_coeff_A.h  eqn_coeff_B.h  eqn_coeff_R.h  eqn_exact_solution_lin.h  eqn_rhs.h  helmholtz_basis.h  helmholtz_eqn_data.h  helmholtz_global.h  helmholtz_ref.h  inverse_matrix.tpp  my_other_tools.h  my_vector_tools.h  my_vector_tools.tpp  ned_rt_basis.h  ned_rt_eqn_boundary_vals.h  ned_rt_eqn_coeff_A.h  ned_rt_eqn_coeff_B.h  ned_rt_eqn_coeff_R.h  ned_rt_eqn_data.h  ned_rt_eqn_rhs.h  ned_rt_global.h  ned_rt_post_processor.h  ned_rt_ref.h  parameters.h  preconditioner.h  q_ned_basis.h  q_ned_global.h  q_ned_post_processor.h  q_ned_ref.h  schur_complement.tpp  shape_fun_concatinate_functions.tpp  shape_fun_scalar.tpp  shape_fun_scalar_grad.tpp  shape_fun_vector.tpp  (+2 more)
include/Ned_RT/: ned_rt_basis.h  ned_rt_global.h  ned_rt_parameters.h  ned_rt_post_processor.h  ned_rt_ref.h
include/Q/: q_basis.h  q_global.h  q_parameters.h  q_post_processor.h  q_ref.h
include/Q_Ned/: q_ned_basis.h  q_ned_global.h  q_ned_parameters.h  q_ned_post_processor.h  q_ned_ref.h
include/RT_DQ/: rt_dq_basis.h  rt_dq_global.h  rt_dq_parameters.h  rt_dq_post_processor.h  rt_dq_ref.h
include/equation_data/: eqn_boundary_vals.h  eqn_coeff_A.h  eqn_coeff_B.h  eqn_coeff_R.h  eqn_exact_solution_lin.h  eqn_rhs.h
include/functions/: basis_ned0.h  basis_ned0.tpp  basis_nedelec.h  basis_nedelec.tpp  basis_nedelec_curl.h  basis_nedelec_curl.tpp  basis_q1.h  basis_q1.tpp  basis_q1_grad.h  basis_q1_grad.tpp  basis_raviart_thomas.h  basis_raviart_thomas.tpp  concatinate_functions.h  concatinate_functions.tpp  my_mapping_q1.h  my_mapping_q1.tpp  scalar_shape_function.h  scalar_shape_function.tpp  scalar_shape_function_grad.h  scalar_shape_function_grad.tpp  vector_shape_function.h  vector_shape_function.tpp  vector_shape_function_curl.h  vector_shape_function_curl.tpp  vector_shape_function_div.h  vector_shape_function_div.tpp
include/linear_algebra/: approximate_inverse.h  approximate_inverse.tpp  (+6 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  files_0.js  files_1.js  files_2.js  (+56 more)
source/: CMakeLists.txt  CMakeLists_LIB.txt  coeff_scalar.cc  eqn_boundary_vals.cc  eqn_coeff_A.cc  eqn_coeff_B.cc  eqn_coeff_R.cc  eqn_exact_solution_lin.cc  eqn_rhs.cc  helmholtz_basis.cc  helmholtz_basis.cpp  helmholtz_eqn_data.cc  helmholtz_global.cc  helmholtz_ref.cc  helmholtz_ref.cpp  main.cc  main_ned_rt.cxx  main_q.cxx  main_q_ned.cc  main_q_ned.cxx  main_rt_dq.cxx  my_other_tools.cc  my_vector_tools.inst.cc  ned_rt_basis.cc  ned_rt_eqn_boundary_vals.cc  ned_rt_eqn_coeff_A.cc  ned_rt_eqn_coeff_B.cc  ned_rt_eqn_data.cc  ned_rt_eqn_rhs.cc  ned_rt_global.cc  ned_rt_post_processor.cc  ned_rt_ref.cc  parameters.cc  parameters.cpp  q_ned_basis.cc  q_ned_global.cc  q_ned_post_processor.cc  q_ned_ref.cc
source/Ned_RT/: ned_rt_basis.cc  ned_rt_global.cc  ned_rt_parameters.cc  ned_rt_post_processor.cc  ned_rt_ref.cc
source/Q/: q_basis.cc  q_global.cc  q_parameters.cc  q_post_processor.cc  q_ref.cc
source/Q_Ned/: q_ned_basis.cc  q_ned_global.cc  q_ned_parameters.cc  q_ned_post_processor.cc  q_ned_ref.cc
source/RT_DQ/: rt_dq_basis.cc  rt_dq_global.cc  rt_dq_parameters.cc  rt_dq_post_processor.cc  rt_dq_ref.cc
source/equation_data/: eqn_boundary_vals.cc  eqn_coeff_A.cc  eqn_coeff_B.cc  eqn_coeff_R.cc  eqn_exact_solution_lin.cc  eqn_rhs.cc
source/vector_tools/: my_vector_tools.inst.cc
test/: CMakeLists.txt  test_fe_projection_nedelec_mpi.cc
(+2 files in other folders)
